--- a/index.html
+++ b/index.html
@@ -2,22 +2,17 @@
     <head>
         <title>Tecky Bot</title>
         <meta charset="UTF-8" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link rel="stylesheet" href="src/index.css"/>
     </head>
     <body>
         <div id="app">
-            <div class="row">
-                <div class="col-sm-4">
-                </div>
-                <div class="col-sm-8">
-                </div>
+            <div id="chat-box">
+            </div>
+            <div>
+                <textarea id="input-area"></textarea>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
         <script src="src/index.js"></script>
     </body>
 
