Fixed some styles problem.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div id="chat-box">
             </div>
             <div>
-                <textarea id="input-area"></textarea>
+                <textarea id="input-area" placeholder="Chat to Tecky Bot"></textarea>
             </div>
         </div>
         <script src="src/index.js"></script>
