--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
             <div id="chat-box">
             </div>
             <div>
-                <textarea id="input-area" placeholder="Chat to Tecky Bot"></textarea>
+                <textarea id="input-area" placeholder="Chat to Tecky Bot" autofocus></textarea>
             </div>
         </div>
         <script src="src/index.js"></script>
+        <script src="src/bot.js"></script>
     </body>
 
 </html>
