--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <textarea id="input-area" placeholder="Chat to Tecky Bot" autofocus></textarea>
             </div>
         </div>
+        <script src="https://unpkg.com/compromise"></script>
         <script src="src/index.js"></script>
         <script src="src/bot.js"></script>
     </body>
